[package]
authors = ["Intrepid AI <hello@intrepid.ai>"]
name = "citygen-rust"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies.bevy]
version = "0.14.0"
default-features = false
features = [
    # default features, except audio and animations
    "bevy_asset", "bevy_color", "bevy_core_pipeline", "bevy_gilrs", "bevy_gizmos",
    "bevy_render", "bevy_scene", "bevy_sprite", "bevy_state", "bevy_winit",
    "tonemapping_luts", "multi_threaded", "x11", "wayland",
]

[dependencies]
bevy-inspector-egui = "0.26.0"
nanorand = "0.7.0"
noise = "0.9.0"
petgraph = "0.6.5"
rapier2d = "0.22.0"
