[package]
authors = ["Intrepid AI <hello@intrepid.ai>"]
name = "citygen-rust"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies.bevy]
version = "0.15.3"
default-features = false
features = [
    # default features, except audio and animations
    "bevy_asset", "bevy_color", "bevy_core_pipeline", "bevy_gilrs", "bevy_gizmos",
    "bevy_render", "bevy_scene", "bevy_sprite", "bevy_state", "bevy_winit",
    "tonemapping_luts", "multi_threaded", "x11", "wayland",
]

[dependencies]
bevy-inspector-egui = "0.29.1"
nanorand = "0.7.0"
noise = "0.9.0"
petgraph = "0.7.1"
rapier2d = "0.23.0"
