[package]
authors = ["Intrepid AI <hello@intrepid.ai>"]
name = "osmto3d-viewer"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.86"
async-fs = "2.1.1"
bevy = { version = "0.13.2", features = ["jpeg"] }
bevy-inspector-egui = "0.24.0"
bevy_mod_raycast = "0.17.0"
nanorand = "0.7.0"
noise = "0.9.0"
parry2d = "0.15.1"
petgraph = "0.6.5"
rstar = "0.12.0"
