[package]
authors = ["Intrepid AI <hello@intrepid.ai>"]
name = "osmto3d-viewer"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies.bevy]
version = "0.14.0"
default-features = false
features = [
    # default features, except audio and animations
    "bevy_asset", "bevy_color", "bevy_core_pipeline", "bevy_gilrs", "bevy_gizmos",
    "bevy_gltf", "bevy_render", "bevy_scene", "bevy_sprite", "bevy_state", "bevy_winit",
    "tonemapping_luts", "multi_threaded", "x11",
]

[dependencies]
anyhow = "1.0.89"
async-fs = "2.1.2"
bevy-inspector-egui = "0.26.0"
bevy_mod_raycast = "0.18.0"
nanorand = "0.7.0"
noise = "0.9.0"
parry2d = "0.17.1"
petgraph = "0.6.5"
rapier2d = "0.22.0"
rstar = "0.12.0"
